# quorum

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  quorum_final_overnight_prompt.md  tsconfig.json  voiceover-1-problem.aiff  voiceover-2-product.aiff  voiceover-3-tech.aiff  voiceover-4-thesis.aiff  voiceover-5-ask.aiff  voiceover-list.txt
bot/: browser-manager.ts  chat-agent.ts  holder.ts  imessage-reader.ts  imessage-sender.ts  kyd-auth.ts  scraper.ts  sms-handler.ts  sms-loop.ts  test-chat-agent.ts
programs/quorum/: Cargo.toml
programs/quorum/src/: lib.rs
server/: blink.ts  index.ts  routes.ts  seed-options.ts  solana.ts  state.ts
tests/: security-audit.sh  test-hold-cycle.ts
web/: index.html  venue-intel.html
