[workspace]
members = [
    "programs/*"
]
resolver = "2"

[patch.crates-io]
# Pin blake3 to avoid edition2024 requirement with older platform-tools
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
